--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="/nibdetlogosmall.jpg" type="image/png" sizes="32x32">
-    <title>National Info Business Directory</title>
+    <link rel="icon" href="/logo.png" type="image/png" sizes="32x32">
+    <title>Spare part ERP</title>
   </head>
   <body>
     <div id="root"></div>
